force-app/main/default/objects/Desk_Reservation__c/Desk_Reservation__c.object-meta.xml
<CustomObject>
    <label>Desk Reservation</label>
    <nameField>
        <label>Desk Reservation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Desk Reservations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>