force-app/main/default/objects/Desk_Reservation__c/fields/Desk__c.field-meta.xml
<CustomField>
    <fullName>Desk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Desk</label>
    <referenceTo>Desk__c</referenceTo>
    <relationshipLabel>Desk Reservations</relationshipLabel>
    <relationshipName>Desk_Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>