force-app/main/default/objects/Desk_Reservation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Checked-In</fullName>
            </value>
            <value>
                <fullName>No-Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>